ui_tests/assignment_6.stderr
error: invalid place expression
   ┌─ main.box:17:5
   │
17 │     bar() := bar();
   │     ^^^^^

